--- a/index.html
+++ b/index.html
@@ -1,414 +1,125 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>The Noori Styles - Product Categories</title>
-  <style>
-    :root {
-      --primary-color: #f499c1;
-      --primary-color-dark: #b35c85;
-      --primary-color-light: #fff0f6;
-      --primary-color-alt: #b3a2ce;
-      --background-color: white;
-      --text-color: #4b3a57;
-    }
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: var(--background-color);
-      color: var(--text-color);
-      transition: background-color 0.3s, color 0.3s;
-    }
-    header {
-      background: var(--primary-color);
-      color: white;
-      text-align: center;
-      padding: 2rem 1rem;
-      font-size: 2rem;
-      font-weight: bold;
-      transition: background-color 0.3s;
-    }
-    #themeChanger {
-      max-width: 960px;
-      margin: 1rem auto;
-      padding: 0 1rem;
-      text-align: center;
-      display: flex;
-      gap: 1rem;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-    #themeChanger label {
-      font-weight: bold;
-      color: var(--text-color);
-      display: block;
-      margin-bottom: 0.3rem;
-    }
-    #themeChanger div {
-      min-width: 130px;
-    }
-    #themeChanger input[type="color"] {
-      width: 100%;
-      height: 40px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      cursor: pointer;
-    }
-    #applyThemeBtn {
-      background: var(--primary-color-alt);
-      color: white;
-      border: none;
-      padding: 0.7rem 1.5rem;
-      border-radius: 10px;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-      align-self: center;
-      height: 40px;
-      margin-top: 1.6rem;
-    }
-    #applyThemeBtn:hover {
-      background: var(--primary-color-dark);
-    }
-    main {
-      max-width: 960px;
-      margin: 2rem auto;
-      padding: 0 1rem;
-    }
-    .section {
-      margin-bottom: 3rem;
-      border: 2px solid var(--primary-color);
-      border-radius: 12px;
-      background: var(--primary-color-light);
-      padding: 1rem;
-      position: relative;
-      transition: background-color 0.3s, border-color 0.3s;
-    }
-    .section-title {
-      font-size: 1.5rem;
-      font-weight: bold;
-      color: var(--primary-color-dark);
-      margin-bottom: 1rem;
-      cursor: text;
-      transition: color 0.3s;
-    }
-    .delete-section-btn {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      background: #ff4d6d;
-      border: none;
-      color: white;
-      padding: 6px 10px;
-      border-radius: 8px;
-      cursor: pointer;
-      font-size: 0.9rem;
-    }
-    .products {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 1.2rem;
-    }
-    @media (min-width: 768px) {
-      .products {
-        grid-template-columns: repeat(4, 1fr);
-      }
-    }
-    .product {
-      background: var(--primary-color-alt);
-      border-radius: 12px;
-      padding: 1rem;
-      box-shadow: 0 0 10px rgba(179, 162, 206, 0.4);
-      color: white;
-      text-align: center;
-      position: relative;
-      transition: background-color 0.3s;
-    }
-    .product img {
-      max-width: 100%;
-      border-radius: 12px;
-      margin-bottom: 0.5rem;
-    }
-    .price {
-      color: white;
-      font-weight: bold;
-      margin-top: 0.3rem;
-    }
-    .delete-btn {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      background: #ff4d6d;
-      border: none;
-      color: white;
-      padding: 4px 8px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 0.8rem;
-    }
-    form {
-      margin: 1rem 0;
-    }
-    form input, form textarea {
-      width: 100%;
-      padding: 0.4rem;
-      margin-bottom: 0.5rem;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      font-size: 1rem;
-      color: var(--text-color);
-      background: white;
-      transition: color 0.3s, background-color 0.3s;
-    }
-    form button {
-      background: var(--primary-color);
-      border: none;
-      padding: 0.6rem 1.2rem;
-      border-radius: 20px;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-      width: 100%;
-      transition: background-color 0.3s;
-    }
-    form button:hover {
-      background: var(--primary-color-dark);
-    }
-    #addSectionBtn {
-      display: block;
-      margin: 2rem auto;
-      background: var(--primary-color-alt);
-      color: white;
-      border: none;
-      padding: 0.8rem 1.5rem;
-      font-size: 1.1rem;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: background-color 0.3s;
-    }
-    #addSectionBtn:hover {
-      background: var(--primary-color-dark);
-    }
-    footer {
-      text-align: center;
-      font-size: 0.9rem;
-      margin-top: 3rem;
-      padding-bottom: 1rem;
-      color: #999;
-    }
-  </style>
-</head>
-<body>
-  <header>The Noori Styles</header>
+function renderSections() {
+  const container = document.getElementById('sections');
+  container.innerHTML = '';
+  categories.forEach(category => {
+    const section = document.createElement('div');
+    section.className = 'section';
 
-  <div id="themeChanger">
-    <div>
-      <label for="primaryColorInput">Primary Color (boxes, buttons)</label>
-      <input id="primaryColorInput" type="color" value="#f499c1" />
-    </div>
-    <div>
-      <label for="backgroundColorInput">Background Color</label>
-      <input id="backgroundColorInput" type="color" value="#ffffff" />
-    </div>
-    <div>
-      <label for="textColorInput">Text Color</label>
-      <input id="textColorInput" type="color" value="#4b3a57" />
-    </div>
-    <button id="applyThemeBtn">Apply Theme</button>
-  </div>
-
-  <main>
-    <button id="addSectionBtn">+ Add New Section</button>
-    <div id="sections"></div>
-  </main>
-  <footer>© 2025 The Noori Styles</footer>
-
-  <script>
-    let categories = JSON.parse(localStorage.getItem('categories') || '[]');
-
-    // Load saved colors or defaults
-    const root = document.documentElement;
-    const savedPrimary = localStorage.getItem('primaryColor') || '#f499c1';
-    const savedBackground = localStorage.getItem('backgroundColor') || '#ffffff';
-    const savedText = localStorage.getItem('textColor') || '#4b3a57';
-
-    const primaryInput = document.getElementById('primaryColorInput');
-    const backgroundInput = document.getElementById('backgroundColorInput');
-    const textInput = document.getElementById('textColorInput');
-
-    primaryInput.value = savedPrimary;
-    backgroundInput.value = savedBackground;
-    textInput.value = savedText;
-
-    setColors(savedPrimary, savedBackground, savedText);
-
-    function saveCategories() {
-      localStorage.setItem('categories', JSON.stringify(categories));
-    }
-
-    function createSection(categoryName = "Add a New Product") {
-      const sectionId = Date.now();
-      categories.push({ id: sectionId, name: categoryName, products: [] });
+    const title = document.createElement('div');
+    title.className = 'section-title';
+    title.contentEditable = true;
+    title.textContent = category.name;
+    title.onblur = () => {
+      category.name = title.textContent.trim() || 'Untitled Section';
       saveCategories();
-      renderSections();
-    }
+    };
 
-    function deleteSection(sectionId) {
-      if (confirm('Delete this entire section?')) {
-        categories = categories.filter(c => c.id !== sectionId);
-        saveCategories();
-        renderSections();
-      }
-    }
+    const deleteBtn = document.createElement('button');
+    deleteBtn.className = 'delete-section-btn';
+    deleteBtn.textContent = 'Delete Section';
+    deleteBtn.onclick = () => deleteSection(category.id);
 
-    function addProduct(categoryId, product) {
-      const cat = categories.find(c => c.id === categoryId);
-      if (cat) {
-        cat.products.push(product);
-        saveCategories();
-        renderSections();
-      }
-    }
+    section.appendChild(title);
+    section.appendChild(deleteBtn);
 
-    function deleteProduct(categoryId, productId) {
-      const cat = categories.find(c => c.id === categoryId);
-      if (cat) {
-        cat.products = cat.products.filter(p => p.id !== productId);
-        saveCategories();
-        renderSections();
-      }
-    }
-
-    function renderSections() {
-      const container = document.getElementById('sections');
-      container.innerHTML = '';
-      categories.forEach(category => {
-        const section = document.createElement('div');
-        section.className = 'section';
-
-        const title = document.createElement('div');
-        title.className = 'section-title';
-        title.contentEditable = true;
-        title.textContent = category.name;
-        title.onblur = () => {
-          category.name = title.textContent.trim() || 'Untitled Section';
-          saveCategories();
+    // Form
+    const form = document.createElement('form');
+    form.innerHTML = `
+      <input type="text" placeholder="Product Name" required />
+      <input type="number" placeholder="Price" required min="0" step="0.01" />
+      <input type="file" accept="image/*" required />
+      <textarea placeholder="Description" required rows="2"></textarea>
+      <button type="submit">Add Product</button>
+    `;
+    form.onsubmit = function(e) {
+      e.preventDefault();
+      const [nameInput, priceInput, fileInput, descInput] = form.querySelectorAll('input, textarea');
+      const reader = new FileReader();
+      reader.onload = () => {
+        const product = {
+          id: Date.now(),
+          name: nameInput.value,
+          price: priceInput.value,
+          image: reader.result,
+          description: descInput.value
         };
+        addProduct(category.id, product);
+        form.reset();
+      };
+      reader.readAsDataURL(fileInput.files[0]);
+    };
+    section.appendChild(form);
 
-        const deleteBtn = document.createElement('button');
-        deleteBtn.className = 'delete-section-btn';
-        deleteBtn.textContent = 'Delete Section';
-        deleteBtn.onclick = () => deleteSection(category.id);
+    // Products
+    const productsDiv = document.createElement('div');
+    productsDiv.className = 'products';
+    category.products.forEach(product => {
+      const div = document.createElement('div');
+      div.className = 'product';
+      div.innerHTML = `
+        <img src="${product.image}" alt="${product.name}" />
+        <h3>${product.name}</h3>
+        <p>${product.description}</p>
+        <div class="price">${product.price}</div>
+      `;
 
-        section.appendChild(title);
-        section.appendChild(deleteBtn);
+      // Delete button
+      const deleteBtn = document.createElement('button');
+      deleteBtn.textContent = 'Delete';
+      deleteBtn.className = 'delete-btn';
+      deleteBtn.onclick = () => deleteProduct(category.id, product.id);
+      div.appendChild(deleteBtn);
 
-        // Form
-        const form = document.createElement('form');
-        form.innerHTML = `
-          <input type="text" placeholder="Product Name" required />
-          <input type="number" placeholder="Price" required min="0" step="0.01" />
-          <input type="file" accept="image/*" required />
-          <textarea placeholder="Description" required rows="2"></textarea>
-          <button type="submit">Add Product</button>
+      // ✅ Edit button
+      const editBtn = document.createElement('button');
+      editBtn.textContent = 'Edit';
+      editBtn.className = 'delete-btn';
+      editBtn.style.right = '60px'; // place left of delete button
+      editBtn.onclick = () => {
+        div.innerHTML = `
+          <form class="edit-form">
+            <input type="text" value="${product.name}" required />
+            <input type="number" value="${product.price}" required min="0" step="0.01" />
+            <input type="file" accept="image/*" />
+            <textarea required rows="2">${product.description}</textarea>
+            <button type="submit">Save</button>
+            <button type="button" class="cancel-btn">Cancel</button>
+          </form>
         `;
-        form.onsubmit = function(e) {
+        const editForm = div.querySelector('.edit-form');
+        const cancelBtn = editForm.querySelector('.cancel-btn');
+
+        cancelBtn.onclick = () => renderSections();
+
+        editForm.onsubmit = e => {
           e.preventDefault();
-          const [nameInput, priceInput, fileInput, descInput] = form.querySelectorAll('input, textarea');
-          const reader = new FileReader();
-          reader.onload = () => {
-            const product = {
-              id: Date.now(),
-              name: nameInput.value,
-              price: priceInput.value,
-              image: reader.result,
-              description: descInput.value
-            };
-            addProduct(category.id, product);
-            form.reset();
+          const [nameInput, priceInput, fileInput, descInput] = editForm.querySelectorAll('input, textarea');
+          const updateProduct = () => {
+            product.name = nameInput.value;
+            product.price = priceInput.value;
+            product.description = descInput.value;
+            saveCategories();
+            renderSections();
           };
-          reader.readAsDataURL(fileInput.files[0]);
+
+          if (fileInput.files.length > 0) {
+            const reader = new FileReader();
+            reader.onload = () => {
+              product.image = reader.result;
+              updateProduct();
+            };
+            reader.readAsDataURL(fileInput.files[0]);
+          } else {
+            updateProduct();
+          }
         };
-        section.appendChild(form);
+      };
+      div.appendChild(editBtn);
 
-        // Products
-        const productsDiv = document.createElement('div');
-        productsDiv.className = 'products';
-        category.products.forEach(product => {
-          const div = document.createElement('div');
-          div.className = 'product';
-          div.innerHTML = `
-            <img src="${product.image}" alt="${product.name}" />
-            <h3>${product.name}</h3>
-            <p>${product.description}</p>
-            <div class="price">${product.price}</div>
-          `;
-          const deleteBtn = document.createElement('button');
-          deleteBtn.textContent = 'Delete';
-          deleteBtn.className = 'delete-btn';
-          deleteBtn.onclick = () => deleteProduct(category.id, product.id);
-          div.appendChild(deleteBtn);
-          productsDiv.appendChild(div);
-        });
+      productsDiv.appendChild(div);
+    });
 
-        section.appendChild(productsDiv);
-        container.appendChild(section);
-      });
-    }
-
-    // Set colors and related variants
-    function setColors(primary, background, text) {
-      root.style.setProperty('--primary-color', primary);
-      root.style.setProperty('--primary-color-dark', shadeColor(primary, -20));
-      root.style.setProperty('--primary-color-light', shadeColor(primary, 80));
-      root.style.setProperty('--primary-color-alt', shadeColor(primary, 20));
-      root.style.setProperty('--background-color', background);
-      root.style.setProperty('--text-color', text);
-
-      // Save to localStorage
-      localStorage.setItem('primaryColor', primary);
-      localStorage.setItem('backgroundColor', background);
-      localStorage.setItem('textColor', text);
-    }
-
-    // Utility: shade a hex color by % amount (- darker, + lighter)
-    function shadeColor(color, percent) {
-      let R = parseInt(color.substring(1,3),16);
-      let G = parseInt(color.substring(3,5),16);
-      let B = parseInt(color.substring(5,7),16);
-
-      R = parseInt(R * (100 + percent) / 100);
-      G = parseInt(G * (100 + percent) / 100);
-      B = parseInt(B * (100 + percent) / 100);
-
-      R = (R<255)?R:255;
-      G = (G<255)?G:255;
-      B = (B<255)?B:255;
-
-      const RR = ((R.toString(16).length==1)?"0"+R.toString(16):R.toString(16));
-      const GG = ((G.toString(16).length==1)?"0"+G.toString(16):G.toString(16));
-      const BB = ((B.toString(16).length==1)?"0"+B.toString(16):B.toString(16));
-
-      return "#"+RR+GG+BB;
-    }
-
-    document.getElementById('applyThemeBtn').onclick = () => {
-      const primary = primaryInput.value;
-      const background = backgroundInput.value;
-      const text = textInput.value;
-      setColors(primary, background, text);
-      alert("Theme updated!");
-    };
-
-    document.getElementById('addSectionBtn').onclick = () => {
-      createSection();
-    };
-
-    window.onload = () => {
-      renderSections();
-    };
-  </script>
-</body>
-</html>
+    section.appendChild(productsDiv);
+    container.appendChild(section);
+  });
+}
