--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
       padding: 2rem 1rem;
       font-size: 2rem;
       font-weight: bold;
-      transition: background-color 0.3s;
     }
     #themeChanger {
       max-width: 960px;
@@ -64,7 +63,6 @@
       border-radius: 10px;
       font-weight: bold;
       cursor: pointer;
-      transition: background-color 0.3s ease;
       align-self: center;
       height: 40px;
       margin-top: 1.6rem;
@@ -84,7 +82,6 @@
       background: var(--primary-color-light);
       padding: 1rem;
       position: relative;
-      transition: background-color 0.3s, border-color 0.3s;
     }
     .section-title {
       font-size: 1.5rem;
@@ -92,7 +89,6 @@
       color: var(--primary-color-dark);
       margin-bottom: 1rem;
       cursor: text;
-      transition: color 0.3s;
     }
     .delete-section-btn {
       position: absolute;
@@ -124,7 +120,6 @@
       color: white;
       text-align: center;
       position: relative;
-      transition: background-color 0.3s;
     }
     .product img {
       max-width: 100%;
@@ -136,11 +131,9 @@
       font-weight: bold;
       margin-top: 0.3rem;
     }
-    .delete-btn {
+    .delete-btn, .edit-btn {
       position: absolute;
       top: 10px;
-      right: 10px;
-      background: #ff4d6d;
       border: none;
       color: white;
       padding: 4px 8px;
@@ -148,18 +141,8 @@
       cursor: pointer;
       font-size: 0.8rem;
     }
-    .edit-btn {
-      position: absolute;
-      top: 10px;
-      right: 60px;
-      background: #ffa500;
-      border: none;
-      color: white;
-      padding: 4px 8px;
-      border-radius: 6px;
-      cursor: pointer;
-      font-size: 0.8rem;
-    }
+    .delete-btn { right: 10px; background: #ff4d6d; }
+    .edit-btn { right: 70px; background: #ffa500; }
     form {
       margin: 1rem 0;
     }
@@ -172,7 +155,6 @@
       font-size: 1rem;
       color: var(--text-color);
       background: white;
-      transition: color 0.3s, background-color 0.3s;
     }
     form button {
       background: var(--primary-color);
@@ -183,7 +165,6 @@
       font-weight: bold;
       cursor: pointer;
       width: 100%;
-      transition: background-color 0.3s;
     }
     form button:hover {
       background: var(--primary-color-dark);
@@ -198,7 +179,6 @@
       font-size: 1.1rem;
       border-radius: 10px;
       cursor: pointer;
-      transition: background-color 0.3s;
     }
     #addSectionBtn:hover {
       background: var(--primary-color-dark);
@@ -217,11 +197,11 @@
 
   <div id="themeChanger">
     <div>
-      <label for="primaryColorInput">Primary Color (boxes, buttons)</label>
+      <label for="primaryColorInput">Primary Color</label>
       <input id="primaryColorInput" type="color" value="#f499c1" />
     </div>
     <div>
-      <label for="backgroundColorInput">Background Color</label>
+      <label for="backgroundColorInput">Background</label>
       <input id="backgroundColorInput" type="color" value="#ffffff" />
     </div>
     <div>
@@ -239,37 +219,21 @@
 
   <script>
     let categories = JSON.parse(localStorage.getItem('categories') || '[]');
-
-    // Load saved colors or defaults
     const root = document.documentElement;
-    const savedPrimary = localStorage.getItem('primaryColor') || '#f499c1';
-    const savedBackground = localStorage.getItem('backgroundColor') || '#ffffff';
-    const savedText = localStorage.getItem('textColor') || '#4b3a57';
-
-    const primaryInput = document.getElementById('primaryColorInput');
-    const backgroundInput = document.getElementById('backgroundColorInput');
-    const textInput = document.getElementById('textColorInput');
-
-    primaryInput.value = savedPrimary;
-    backgroundInput.value = savedBackground;
-    textInput.value = savedText;
-
-    setColors(savedPrimary, savedBackground, savedText);
 
     function saveCategories() {
       localStorage.setItem('categories', JSON.stringify(categories));
     }
 
-    function createSection(categoryName = "Add a New Product") {
-      const sectionId = Date.now();
-      categories.push({ id: sectionId, name: categoryName, products: [] });
+    function createSection(name = "New Section") {
+      categories.push({ id: Date.now(), name, products: [] });
       saveCategories();
       renderSections();
     }
 
-    function deleteSection(sectionId) {
-      if (confirm('Delete this entire section?')) {
-        categories = categories.filter(c => c.id !== sectionId);
+    function deleteSection(id) {
+      if (confirm("Delete this section?")) {
+        categories = categories.filter(c => c.id !== id);
         saveCategories();
         renderSections();
       }
@@ -305,38 +269,44 @@
         title.contentEditable = true;
         title.textContent = category.name;
         title.onblur = () => {
-          category.name = title.textContent.trim() || 'Untitled Section';
+          category.name = title.textContent.trim() || "Untitled Section";
           saveCategories();
         };
 
-        const deleteBtn = document.createElement('button');
-        deleteBtn.className = 'delete-section-btn';
-        deleteBtn.textContent = 'Delete Section';
-        deleteBtn.onclick = () => deleteSection(category.id);
+        const delBtn = document.createElement('button');
+        delBtn.className = 'delete-section-btn';
+        delBtn.textContent = 'Delete Section';
+        delBtn.onclick = () => deleteSection(category.id);
 
         section.appendChild(title);
-        section.appendChild(deleteBtn);
+        section.appendChild(delBtn);
 
-        // Form
+        // Product form
         const form = document.createElement('form');
         form.innerHTML = `
-          <input type="text" placeholder="Product Name" required />
-          <input type="number" placeholder="Price" required min="0" step="0.01" />
-          <input type="file" accept="image/*" required />
-          <textarea placeholder="Description" required rows="2"></textarea>
+          <input type="text" name="pname" placeholder="Product Name" required />
+          <input type="number" name="pprice" placeholder="Price (PKR)" required min="0" />
+          <input type="file" name="pimage" accept="image/*" required />
+          <textarea name="pdesc" placeholder="Description" required rows="2"></textarea>
           <button type="submit">Add Product</button>
         `;
-        form.onsubmit = function(e) {
+        form.onsubmit = e => {
           e.preventDefault();
-          const [nameInput, priceInput, fileInput, descInput] = form.querySelectorAll('input, textarea');
+          const nameInput = form.querySelector('[name="pname"]');
+          const priceInput = form.querySelector('[name="pprice"]');
+          const fileInput = form.querySelector('[name="pimage"]');
+          const descInput = form.querySelector('[name="pdesc"]');
+
+          if (!fileInput.files[0]) return;
+
           const reader = new FileReader();
           reader.onload = () => {
             const product = {
               id: Date.now(),
               name: nameInput.value,
               price: priceInput.value,
-              image: reader.result,
-              description: descInput.value
+              description: descInput.value,
+              image: reader.result
             };
             addProduct(category.id, product);
             form.reset();
@@ -345,7 +315,7 @@
         };
         section.appendChild(form);
 
-        // Products
+        // Products display
         const productsDiv = document.createElement('div');
         productsDiv.className = 'products';
         category.products.forEach(product => {
@@ -355,25 +325,22 @@
             <img src="${product.image}" alt="${product.name}" />
             <h3>${product.name}</h3>
             <p>${product.description}</p>
-            <div class="price">${product.price}</div>
+            <div class="price">PKR ${product.price}</div>
           `;
 
-          // Delete button
-          const deleteBtn = document.createElement('button');
-          deleteBtn.textContent = 'Delete';
-          deleteBtn.className = 'delete-btn';
-          deleteBtn.onclick = () => deleteProduct(category.id, product.id);
-          div.appendChild(deleteBtn);
+          const del = document.createElement('button');
+          del.textContent = "Delete";
+          del.className = "delete-btn";
+          del.onclick = () => deleteProduct(category.id, product.id);
 
-          // Edit button
-          const editBtn = document.createElement('button');
-          editBtn.textContent = 'Edit';
-          editBtn.className = 'edit-btn';
-          editBtn.onclick = () => {
+          const edit = document.createElement('button');
+          edit.textContent = "Edit";
+          edit.className = "edit-btn";
+          edit.onclick = () => {
             div.innerHTML = `
               <form class="edit-form">
                 <input type="text" value="${product.name}" required />
-                <input type="number" value="${product.price}" required min="0" step="0.01" />
+                <input type="number" value="${product.price}" required min="0" />
                 <input type="file" accept="image/*" />
                 <textarea required rows="2">${product.description}</textarea>
                 <button type="submit">Save</button>
@@ -381,35 +348,32 @@
               </form>
             `;
             const editForm = div.querySelector('.edit-form');
-            const cancelBtn = editForm.querySelector('.cancel-btn');
+            editForm.querySelector('.cancel-btn').onclick = () => renderSections();
 
-            cancelBtn.onclick = () => renderSections();
-
-            editForm.onsubmit = e => {
-              e.preventDefault();
+            editForm.onsubmit = ev => {
+              ev.preventDefault();
               const [nameInput, priceInput, fileInput, descInput] = editForm.querySelectorAll('input, textarea');
-              const updateProduct = () => {
-                product.name = nameInput.value;
-                product.price = priceInput.value;
-                product.description = descInput.value;
-                saveCategories();
-                renderSections();
-              };
+              product.name = nameInput.value;
+              product.price = priceInput.value;
+              product.description = descInput.value;
 
               if (fileInput.files.length > 0) {
                 const reader = new FileReader();
                 reader.onload = () => {
                   product.image = reader.result;
-                  updateProduct();
+                  saveCategories();
+                  renderSections();
                 };
                 reader.readAsDataURL(fileInput.files[0]);
               } else {
-                updateProduct();
+                saveCategories();
+                renderSections();
               }
             };
           };
-          div.appendChild(editBtn);
 
+          div.appendChild(del);
+          div.appendChild(edit);
           productsDiv.appendChild(div);
         });
 
@@ -418,58 +382,33 @@
       });
     }
 
-    // Set colors and related variants
+    // Theme controls
     function setColors(primary, background, text) {
       root.style.setProperty('--primary-color', primary);
-      root.style.setProperty('--primary-color-dark', shadeColor(primary, -20));
-      root.style.setProperty('--primary-color-light', shadeColor(primary, 80));
-      root.style.setProperty('--primary-color-alt', shadeColor(primary, 20));
       root.style.setProperty('--background-color', background);
       root.style.setProperty('--text-color', text);
-
-      // Save to localStorage
       localStorage.setItem('primaryColor', primary);
       localStorage.setItem('backgroundColor', background);
       localStorage.setItem('textColor', text);
     }
 
-    // Utility: shade a hex color by % amount (- darker, + lighter)
-    function shadeColor(color, percent) {
-      let R = parseInt(color.substring(1,3),16);
-      let G = parseInt(color.substring(3,5),16);
-      let B = parseInt(color.substring(5,7),16);
-
-      R = parseInt(R * (100 + percent) / 100);
-      G = parseInt(G * (100 + percent) / 100);
-      B = parseInt(B * (100 + percent) / 100);
-
-      R = (R<255)?R:255;
-      G = (G<255)?G:255;
-      B = (B<255)?B:255;
-
-      const RR = ((R.toString(16).length==1)?"0"+R.toString(16):R.toString(16));
-      const GG = ((G.toString(16).length==1)?"0"+G.toString(16):G.toString(16));
-      const BB = ((B.toString(16).length==1)?"0"+B.toString(16):B.toString(16));
-
-      return "#"+RR+GG+BB;
-    }
-
     document.getElementById('applyThemeBtn').onclick = () => {
-      const primary = primaryInput.value;
-      const background = backgroundInput.value;
-      const text = textInput.value;
+      const primary = document.getElementById('primaryColorInput').value;
+      const background = document.getElementById('backgroundColorInput').value;
+      const text = document.getElementById('textColorInput').value;
       setColors(primary, background, text);
-      alert("Theme updated!");
     };
 
-    document.getElementById('addSectionBtn').onclick = () => {
-      createSection();
-    };
+    document.getElementById('addSectionBtn').onclick = () => createSection();
 
     window.onload = () => {
+      // Load theme
+      const p = localStorage.getItem('primaryColor') || '#f499c1';
+      const b = localStorage.getItem('backgroundColor') || '#ffffff';
+      const t = localStorage.getItem('textColor') || '#4b3a57';
+      setColors(p, b, t);
       renderSections();
     };
   </script>
 </body>
 </html>
-
